# osrs-nav

./: .gitignore  Cargo.toml  README.md
client-api/: README.md
client-api/runemate/: build.gradle.kts
client-api/runemate/src/main/java/com/google/gson/typeadapters/: RuntimeTypeAdapterFactory.java
client-api/runemate/src/main/kotlin/de/torsm/osrsnav/: OsrsNav.kt
client-api/runemate/src/test/kotlin/de/torsm/osrsnav/: TestBot.kt
client-api/runemate/src/test/resources/: TestBot.xml
generator/: Cargo.toml  Edges.yaml  Generator.yaml  README.md
generator/src/: generator.rs  main.rs
model/: Cargo.toml  README.md
model/src/: constants.rs  definitions.rs  lib.rs  util.rs
pathfinder/: Cargo.toml  README.md
pathfinder/src/: lib.rs
webservice/: Cargo.toml  README.md
webservice/src/: main.rs
