[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
pathfinder = { path = "../pathfinder" }
rs3cache = { git = "https://github.com/Torsm/rs3cache", features = ["osrs"] }
rs3cache_backend = { git = "https://github.com/Torsm/rs3cache" }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
ciborium = "0.2.0"
expect-exit = "0.4.1"
clap = { version = "4.1.8", features = ["derive"] }
flate2 = "1.0.23"
