[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
pathfinder = { path = "../pathfinder" }
rs3cache = { git = "https://github.com/Torsm/rs3cache", features = ["osrs"] }
rs3cache_backend = { git = "https://github.com/Torsm/rs3cache" }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.8.26"
ciborium = "0.2.1"
expect-exit = "0.5.2"
clap = { version = "=4.1.8", features = ["derive"] }
flate2 = "1.0.28"
